index html contact form

--- a/index.html
+++ b/index.html
@@ -531,7 +531,9 @@
                   <input type="email" class="form-control" name="email" placeholder="Your Email" required>
                 </div>
 
-                
+                <div class="col-md-12">
+                  <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+                </div>
 
                 <div class="col-md-12">
                   <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
