index.html for view

--- a/en-index.html
+++ b/en-index.html
@@ -60,7 +60,7 @@
           
           <li class="dropdown has-dropdown"><a href="#"><span>Language</span> <i class="bi bi-chevron-down"></i></a>
             <ul class="dd-box-shadow">
-              <li><a href="tr-index.html"><img src="assets/img/icon/turkey.png" alt="" style="height: 45px;"></a></li>
+              <li><a href="index.html"><img src="assets/img/icon/turkey.png" alt="" style="height: 45px;"></a></li>
               <li><a href="en-index.html"><img src="assets/img/icon/united-kingdom.png" alt="" style="height: 45px;"></a></li>
               <!-- <li><a href="#"><img src="assets/img/icon/german.png" alt="" style="height: 45px;"></a></li>-->
             </ul>
