--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <header id="header" class="header fixed-top d-flex align-items-center">
     <div class="container-fluid d-flex align-items-center justify-content-between">
 
-      <a href="tr-index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+      <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <img src="assets/img/logo.png" alt="">
         
@@ -52,15 +52,15 @@
       <!-- Nav Menu -->
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="tr-index.html#hero" class="active">Ana Sayfa</a></li>
-          <li><a href="tr-index.html#about">Hakkımızda</a></li>
-          <li><a href="tr-index.html#services">Üretim</a></li>
-          <li><a href="tr-index.html#portfolio">Galeri</a></li>
-          <li><a href="tr-index.html#contact">İletişim</a></li>
+          <li><a href="index.html#hero" class="active">Ana Sayfa</a></li>
+          <li><a href="index.html#about">Hakkımızda</a></li>
+          <li><a href="index.html#services">Üretim</a></li>
+          <li><a href="index.html#portfolio">Galeri</a></li>
+          <li><a href="index.html#contact">İletişim</a></li>
           
           <li class="dropdown has-dropdown"><a href="#"><span>Dil</span> <i class="bi bi-chevron-down"></i></a>
             <ul class="dd-box-shadow">
-              <li><a href="tr-index.html"><img src="assets/img/icon/turkey.png" alt="" style="height: 45px;"></a></li>
+              <li><a href="index.html"><img src="assets/img/icon/turkey.png" alt="" style="height: 45px;"></a></li>
               <li><a href="en-index.html"><img src="assets/img/icon/united-kingdom.png" alt="" style="height: 45px;"></a></li>
               <!-- <li><a href="#"><img src="assets/img/icon/german.png" alt="" style="height: 45px;"></a></li>-->
             </ul>
@@ -70,7 +70,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav><!-- End Nav Menu -->
 
-      <a class="btn-getstarted" href="tr-index.html#contact">İletişime Geçin</a>
+      <a class="btn-getstarted" href="index.html#contact">İletişime Geçin</a>
 
     </div>
   </header><!-- End Header -->
@@ -564,7 +564,7 @@
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-5 col-md-12 footer-about">
-          <a href="tr-index.html" class="logo d-flex align-items-center">
+          <a href="index.html" class="logo d-flex align-items-center">
             <img src="assets/img/logo.png" alt="">
           </a>
           <p>“Ayağınızdaki Rahatlık ile Tüm Gözler Üzerinizde“</p>
@@ -581,9 +581,9 @@
           <ul>
             <li><a href="#">Ana Sayfa</a></li>
             <li><a href="about.html">Hakkımızda</a></li>
-            <li><a href="tr-index.html#services">Üretim Aşamaları</a></li>
-            <li><a href="tr-index.html#portfolio">Galeri</a></li>
-            <li><a href="tr-index.html#contact">İletişim</a></li>
+            <li><a href="index.html#services">Üretim Aşamaları</a></li>
+            <li><a href="index.html#portfolio">Galeri</a></li>
+            <li><a href="index.html#contact">İletişim</a></li>
           </ul>
         </div>
 
